--- a/cebong/templates/base.html
+++ b/cebong/templates/base.html
@@ -4,6 +4,8 @@
         <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css" />
+        <link rel="stylesheet" href="{{ SITEURL }}/theme/css/lightbox.css" type="text/css" />
+
         {% if FEED_ATOM %}
         <link href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
         {% endif %}
@@ -84,5 +86,7 @@
 {% include 'analytics.html' %}
 {% include 'piwik.html' %}
 {% include 'disqus_script.html' %}
+
+<script src="{{ SITEURL }}/theme/js/lightbox-plus-jquery.min.js" type="text/javascript"></script>
 </body>
 </html>
